# project_final_RToS

./: README.md
project-final_rtos/: CMakeLists.txt  sdkconfig  sdkconfig.old
project-final_rtos/main/: CMakeLists.txt  blink_example_main.c  main.c
project-final_rtos/main/ADC_library/include/: ADC_library.h
project-final_rtos/main/ADC_library/src/: ADC_library.c
project-final_rtos/main/PWM_Control/include/: pwm_control.h
project-final_rtos/main/PWM_Control/src/: pwm_control.c
project-final_rtos/main/command_library/include/: command_library.h
project-final_rtos/main/command_library/src/: command_library.c
project-final_rtos/main/server_library/include/: server_library.h
project-final_rtos/main/server_library/src/: server_library.c
project-final_rtos/main/webpage/: index.html  script.js  styles.css
project-final_rtos/main/wifi_library/include/: wifi_library.h
project-final_rtos/main/wifi_library/src/: wifi_library.c
project_final/: CMakeLists.txt
